# python-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  requirements.txt
.github/workflows/: tests.yml
tools/analyzer/: BUILD.bazel  analyze.py
