load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "analyze",
    srcs = ["analyze.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//numpy",
        "@pip//scipy",
    ],
)

py_library(
    name = "analyzer",
    srcs = [
        "__init__.py",
        "analyze.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//numpy",
        "@pip//scipy",
    ],
)
